--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ItemSelect"></activity>
-        <activity android:name=".PastRuns"></activity>
-        <activity android:name=".PopupWindow"></activity>
-        <activity android:name=".RunStats"></activity>
-        <activity android:name=".MainActivity">
+        <activity
+            android:name=".ItemSelect"
+            android:exported="true" />
+        <activity
+            android:name=".PastRuns"
+            android:exported="true" />
+        <activity
+            android:name=".PopupWindow"
+            android:exported="true" />
+        <activity
+            android:name=".RunStats"
+            android:exported="true" />
+        <activity android:name=".MainActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
